# eslab

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
ascend/: acl.cpp  acl.hpp  acl_device.cpp  acl_device.hpp  button.cpp  button.hpp  face_feature_train_mean.hpp  face_feature_train_std.hpp  model.cpp  model.hpp  pca_9557.cpp  pca_9557.hpp  presenter.cpp  presenter.hpp  ssd_1306.cpp  ssd_1306.hpp
data/: vanillacnn.om
face_recognition/: face_detect.cpp  face_detect.hpp  face_feature_mask.cpp  face_feature_mask.hpp  face_feature_train_mean.hpp  face_feature_train_std.hpp  face_recognition.cpp  face_recognition.hpp  face_utils.cpp  face_utils.hpp
model/: face_detect.cpp  face_detect.hpp  face_feature_mask.cpp  face_feature_mask.hpp
util/: image.cpp  image.hpp  math.cpp  math.hpp
